--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 Coding/data/submissions/conll16-st-end-to-end-output/
 Coding/data/gold_standard/conll16st-en-03-29-16-blind-test
+
+Paper/projectreport\.aux
+
+Paper/projectreport\.bbl
+
+Paper/projectreport\.blg
+
+Paper/projectreport\.log
+
+Paper/projectreport\.synctex\.gz
